samples/_failures_safe/1761539220_fc3ca7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_de978b93.c: In function ‘main’:
./samples/SAFE/__tmp_de978b93.c:187:9: error: expected declaration or statement at end of input
  187 |         }
      |         ^
./samples/SAFE/__tmp_de978b93.c:187:9: error: expected declaration or statement at end of input
